Fixed map right alignment

--- a/content/css/_main.scss
+++ b/content/css/_main.scss
@@ -1023,13 +1023,13 @@ a {
 
   article.map {
 
-    #map { position:absolute; top:-19px; height:387px + 18*2; left:2px; width:603px; z-index:100; }
+    #map { position:absolute; top:-19px; height:387px + 18*2; left:2px; width:627px; z-index:100; }
 
     .content {
       height:387px;
 
       .right {
-        margin-left:620px;
+        margin-left:638px;
         float:left;
       }
     } // .content
